--- a/Views/Course/CourseList.html
+++ b/Views/Course/CourseList.html
@@ -62,10 +62,11 @@
     </style>
 </head>
 <body>
-<div>
-    <img src="../../Images/banner/banner01.png" style="width: 100%"/>
-</div>
+
 <div class="container">
+    <div class="row">
+        <img src="../../Images/banner/banner01.png" style="width: 100%"/>
+    </div>
     <div class="row" style="border-bottom: 1px solid #dddddd">
         <button class="col-xs-4 typeButton">课程类型</button>
         <button class="col-xs-4 typeButton" id="studentButton">学生课程</button>
