--- a/Views/Account/ChangePassword.html
+++ b/Views/Account/ChangePassword.html
@@ -21,19 +21,24 @@
         .pl15 {
             padding-left: 15px;
         }
+
         .pr15 {
             padding-right: 15px;
         }
+
         .border_btm {
             border-bottom: 1px solid #eeeeee;
         }
+
         .pdtb10 {
             padding-top: 10px;
             padding-bottom: 10px;
         }
+
         .display_block {
             display: block
         }
+
         #changePwd {
             width: 100%;
             border: none;
@@ -50,13 +55,13 @@
         <div class="col-xs-3 pl15 pr5">
             <span class="pdtb10 display_block">原密码</span></div>
         <div class="col-xs-9 pr15 pl5">
-            <input type="password" id="oldPwd" placeholder="请输入原密码"/></div>
+            <input type="password" style="color: #808080;border-color: #eee;" id="oldPwd" placeholder="请输入原密码"/></div>
     </div>
     <div class="row pdtb10 border_btm">
         <div class="col-xs-3 pl15 pr5">
             <span class="pdtb10 display_block">新密码</span></div>
         <div class="col-xs-9 pr15 pl5">
-            <input type="password" id="newPwd" placeholder="请输入新的密码"/></div>
+            <input type="password" style="color: #808080;border-color: #eee;" id="newPwd" placeholder="请输入新的密码"/></div>
     </div>
     <div class="row pdtb15">
         <div class="pdtb10 col-xs-12 text-right">
@@ -67,17 +72,17 @@
 <!--navbar-fixed-bottom-->
 <div style="height: 60px;width: 100%;"></div>
 <!--<div class="container navbar-fixed-bottom" style="background: #FFF;">-->
-    <!--<div class="row" style="border-top: 1px solid #EEEEEE;">-->
-        <!--<div class="col-xs-4" style="height: 50px;line-height: 50px;text-align: center;font-size: 16px;">-->
-            <!--<a style="color: #000;" href="/Course/Views/Course/CourseList.html">课程介绍</a>-->
-        <!--</div>-->
-        <!--<div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">-->
-            <!--<a style="color: #000;" href="/Course/Views/book/booking.html">我的预约</a>-->
-        <!--</div>-->
-        <!--<div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">-->
-            <!--<a style="color: #000;" href="/Course/Views/Account/PersonalCenter.html">个人中心</a>-->
-        <!--</div>-->
-    <!--</div>-->
+<!--<div class="row" style="border-top: 1px solid #EEEEEE;">-->
+<!--<div class="col-xs-4" style="height: 50px;line-height: 50px;text-align: center;font-size: 16px;">-->
+<!--<a style="color: #000;" href="/Course/Views/Course/CourseList.html">课程介绍</a>-->
+<!--</div>-->
+<!--<div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">-->
+<!--<a style="color: #000;" href="/Course/Views/book/booking.html">我的预约</a>-->
+<!--</div>-->
+<!--<div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">-->
+<!--<a style="color: #000;" href="/Course/Views/Account/PersonalCenter.html">个人中心</a>-->
+<!--</div>-->
+<!--</div>-->
 <!--</div>-->
 <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
