--- a/Views/book/Sign_UnReg.html
+++ b/Views/book/Sign_UnReg.html
@@ -42,7 +42,7 @@
     <div class="row mgt8">
         <div class="col-xs-12">
             <span>出生日期：*</span>
-            <input type="text" name="birthday" id="birthday">
+            <input type="text" name="birthday" id="birthday" placeholder="格式：2000-01-01">
         </div>
     </div>
     <!--<div class="row mgt8">-->
