--- a/Views/index.html
+++ b/Views/index.html
@@ -30,6 +30,12 @@
                 <button id="btnRegister">注 册</button>
             </a></div>
     </div>
+    <div class="row pt15">
+        <div class="col-xs-12 text-right">
+            <a href="book/Sign_UnReg.html" style="text-decoration: underline;color:#fd5454;">
+                快速报名
+            </a></div>
+    </div>
 </div>
 
 
