能量比——》积分

--- a/Views/Course/CourseList.html
+++ b/Views/Course/CourseList.html
@@ -11,15 +11,15 @@
     <style>
 
         .typeButton {
-             height: 40px;
-             font-size: 15px;
-             background-color: #ffffff;
-             margin: 0px;
-             border: 0px;
-             padding: 0px;
-             outline: none;
-             border-bottom: 1px solid #ffffff;
-         }
+            height: 40px;
+            font-size: 15px;
+            background-color: #ffffff;
+            margin: 0px;
+            border: 0px;
+            padding: 0px;
+            outline: none;
+            border-bottom: 1px solid #ffffff;
+        }
 
         .active {
             border-bottom: 1px solid #ff0000;
@@ -46,7 +46,7 @@
             width: 30%;
             font-size: 10px;
             height: 30px;
-            border:0;
+            border: 0;
             border-radius: 3px;
             background: #F24D4D;
             color: #fff;
@@ -65,7 +65,7 @@
 
 <div class="container">
     <div class="row">
-        <img src="../../Images/banner/banner01.png" style="width: 100%"/>
+        <a href="../Help/IntegralRule.html"><img src="../../Images/banner/banner01.png" style="width: 100%"/></a>
     </div>
     <div class="row" style="border-bottom: 1px solid #dddddd">
         <button class="col-xs-4 typeButton">课程类型</button>
@@ -86,10 +86,12 @@
         <div class="col-xs-4" style="height: 50px;line-height: 50px;text-align: center;font-size: 16px;">
             <a style="color: #F24C4C;" href="/Course/Views/Course/CourseList.html">课程介绍</a>
         </div>
-        <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
+        <div class="col-xs-4"
+             style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
             <a style="color: #000;" href="/Course/Views/book/booking.html">我的预约</a>
         </div>
-        <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
+        <div class="col-xs-4"
+             style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
             <a style="color: #000;" href="/Course/Views/PersonalCenter/PersonalCenter.html">个人中心</a>
         </div>
     </div>
