--- a/Views/Help/IntegralRule.html
+++ b/Views/Help/IntegralRule.html
@@ -20,7 +20,7 @@
             <h5>1. 所有摩英达人(摩英达人的达标条件详见个人中心-申请成为摩英达人)都拥有一个专属二维码</h5>
             <h5>2. 被推广人扫描您的二维码注册报名并现场签到后，您都可以获得一笔积分，积分规则如下：</h5>
         </div>
-        <div class="col-x-12" id="integralList">
+        <div class="col-xs-12" id="integralList">
 
         </div>
         <div class="col-xs-12">
