--- a/Views/Help/IntegralRule.html
+++ b/Views/Help/IntegralRule.html
@@ -7,38 +7,114 @@
     <meta name="format-detection" content="email=no"/>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="../../Css/Help/IntegralRule.css">
     <title>获取积分，以及积分规则</title>
 </head>
 <body>
 <div class="container">
+    <div class="row" style="margin-top: 30px">
+        <div class="col-xs-5">
+            <div style="background-color: #ea3323;width: 7px;height: 7px;border-radius: 4px;float: right;margin-top: 5px"></div>
+        </div>
+        <div class="col-xs-7">如何获得积分</div>
+    </div>
     <div class="row">
-        <div class="col-xs-12">
-            <br/>
-            <strong>如何获得积分？</strong>
-        </div>
-        <div class="col-xs-12">
-            <h5>1. 所有摩英达人(摩英达人的达标条件详见个人中心-申请成为摩英达人)都拥有一个专属二维码</h5>
-            <h5>2. 被推广人扫描您的二维码注册报名并现场签到后，您都可以获得一笔积分，积分规则如下：</h5>
-        </div>
-        <div class="col-x-12" id="integralList">
+        <ul class="timeline">
+            <li>
+                <div class="number"></div>
+                <div class="content">
+                    <p>所有摩英达人(摩英达人的达标条件详见个人中心-申请成为摩英达人)都拥有一个专属二维码</p>
+                    <br/>
+                </div>
+            </li>
+            <li>
+                <div class="number"></div>
+                <div class="content">
+                    <p>被推广人扫描您的二维码注册报名并现场签到后，您都可以获得一笔积分，积分规则如下：</p>
+                    <br/>
+                    <ul style="padding: 0px;text-align: center" id="integralList">
 
-        </div>
-        <div class="col-xs-12">
-            <h5>3. 系统会不定期奖励活跃用户一些积分，作为回馈</h5>
-            <h5>4. 积分可以直接兑换课程以及衍生物</h5>
-        </div>
-        <div class="col-xs-12">
-            <h5>积分兑换课程规则：（兑现以下课程时食宿费自理）</h5>
-            <h5>摩英青少年领袖特训营（单阶复训名额）：仅需11840积分</h5>
-            <h5>摩英青少年领袖特训营（单阶新训名额）：仅需43520积分</h5>
-            <h5>摩英青少年领袖特训营（奇迹套餐名额）：仅需67520积分</h5>
-            <h5>摩英一对一网络外教课（30节*17分钟）：仅需3196积分</h5>
-            <h5>摩英梦想风暴（单阶新训名额）：仅需35520积分</h5>
-            <h5>摩英领袖演说（单阶新训名额） ： 仅需35520积分</h5>
-            <h5>摩英智慧家长高级班（单阶新训名额）：仅需27520积分</h5>
-            <h5>摩英全脑能量开发（单阶新训名额）：仅需35520积分</h5>
-            <h5>摩英中外教网络英语（一年新训名额）：仅需15920积分</h5>
-        </div>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="number"></div>
+                <div class="content">
+                    <p>系统会不定期奖励活跃用户一些积分，作为回馈</p>
+                    <br/>
+                </div>
+            </li>
+            <li>
+                <div class="number"></div>
+                <div class="content">
+                    <p style="padding-bottom: 0px">积分可以直接兑换课程以及衍生物</p>
+                    <p>积分兑换课程规则：（兑现以下课程时食宿费自理）</p>
+                    <br/>
+                    <ul style="padding: 0px;text-align: center">
+                        <li class="list-group-item table" style="background-color: #ee5c50;color: #ffffff;border-top-left-radius: 10px;border-top-right-radius: 10px;">
+                            <div class="row">
+                                <div class="col-xs-8">课程</div>
+                                <div class="col-xs-4">积分</div>
+                            </div>
+                        </li>
+                        <li class="list-group-item table">
+                            <div class="row">
+                                <div class="col-xs-8">摩英青少年领袖特训营（单阶复训名额）</div>
+                                <div class="col-xs-4">11840</div>
+                            </div>
+                        </li>
+                        <li class="list-group-item table">
+                            <div class="row">
+                                <div class="col-xs-8">摩英青少年领袖特训营（单阶新训名额）</div>
+                                <div class="col-xs-4">43520</div>
+                            </div>
+                        </li>
+                        <li class="list-group-item table">
+                            <div class="row">
+                                <div class="col-xs-8">摩英青少年领袖特训营（奇迹套餐名额）</div>
+                                <div class="col-xs-4">67520</div>
+                            </div>
+                        </li>
+                        <li class="list-group-item table">
+                            <div class="row">
+                                <div class="col-xs-8">摩英一对一网络外教课（30节*17分钟）</div>
+                                <div class="col-xs-4">3196</div>
+                            </div>
+                        </li>
+                        <li class="list-group-item table">
+                            <div class="row">
+                                <div class="col-xs-8">摩英梦想风暴（单阶新训名额）</div>
+                                <div class="col-xs-4">35520</div>
+                            </div>
+                        </li>
+                        <li class="list-group-item table">
+                            <div class="row">
+                                <div class="col-xs-8">摩英领袖演说（单阶新训名额）</div>
+                                <div class="col-xs-4">35520</div>
+                            </div>
+                        </li>
+                        <li class="list-group-item table">
+                            <div class="row">
+                                <div class="col-xs-8">摩英智慧家长高级班（单阶新训名额）</div>
+                                <div class="col-xs-4">27520</div>
+                            </div>
+                        </li>
+                        <li class="list-group-item table">
+                            <div class="row">
+                                <div class="col-xs-8">摩英全脑能量开发（单阶新训名额）</div>
+                                <div class="col-xs-4">35520</div>
+                            </div>
+                        </li>
+                        <li class="list-group-item table" style="border-bottom: 1px solid #ee5c50;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px">
+                            <div class="row">
+                                <div class="col-xs-8">摩英中外教网络英语（一年新训名额）</div>
+                                <div class="col-xs-4">15920</div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
     </div>
 </div>
 
