--- a/Views/book/Sign_UnReg.html
+++ b/Views/book/Sign_UnReg.html
@@ -58,7 +58,7 @@
                 <span class="input-group-addon">
                     <input type="radio" name="account" value="1">
                 </span>
-                <input type="text" class="form-control" name="mob" id="Phone" placeholder="选中的手机号为账号">
+                <input type="text" class="form-control" name="mob" id="Phone" placeholder="选中的手机号为您下次登录的账号">
             </div>
         </div>
     </div>
@@ -82,7 +82,7 @@
                 <span class="input-group-addon">
                     <input type="radio" name="account" value="2">
                 </span>
-                <input type="text" class="form-control" name="f_mobile" id="f_mobile" placeholder="选中的手机号为账号">
+                <input type="text" class="form-control" name="f_mobile" id="f_mobile" placeholder="选中的手机号为您下次登录的账号">
             </div>
         </div>
     </div>
@@ -105,7 +105,7 @@
                 <span class="input-group-addon">
                     <input type="radio" name="account" value="3">
                 </span>
-                <input type="text" class="form-control" name="m_mobile" id="m_mobile" placeholder="选中的手机号为账号">
+                <input type="text" class="form-control" name="m_mobile" id="m_mobile" placeholder="选中的手机号为您下次登录的账号">
             </div>
         </div>
     </div>
