--- a/Views/Talent/ApplyTalent.html
+++ b/Views/Talent/ApplyTalent.html
@@ -23,7 +23,7 @@
             <p class="apply_field" id="unStandard">未达到申请条件</p>
             <button class="apply_button" id="apply" onclick="Able_Apply()">申请成为摩英达人</button>
             <!--<button class="apply_button">申请成为摩英达人</button>-->
-            <button class="rule"onclick="window.location.href='TalentRule.html'">规则说明></button>
+            <button class="rule"onclick="window.location.href='TalentRule.html'" style="color:#5555dd;text-decoration: underline;">规则说明>></button>
             <p class="customerService">客服电话:400-800-6258</p>
         </div>
     </div>
