--- a/Views/index.html
+++ b/Views/index.html
@@ -18,10 +18,16 @@
         <img src="../Images/account/Account_Logo.png" style="height: 100px;width: 100px;"/>
         <!--<p style="font-size: 16px;color: #F24C4C; font-family: 华文新魏">摩英教育</p>-->
     </div>
-    <div class="row pt50">
+    <div class="row pt15">
+        <div class="col-xs-12 text-center">
+            <a href="book/Sign_UnReg.html">
+                <button id="btnSendSMS">新学员快速报名</button>
+            </a></div>
+    </div>
+    <div class="row pt15">
         <div class="col-xs-12 text-center">
             <a href="Account/Login.html">
-                <button id="btnLogin">登 录</button>
+                <button id="btnLogin">老学员登录</button>
             </a></div>
     </div>
     <div class="row pt15">
@@ -30,12 +36,13 @@
                 <button id="btnRegister">注 册</button>
             </a></div>
     </div>
-    <div class="row pt15">
-        <div class="col-xs-12 text-right">
-            <a href="book/Sign_UnReg.html" style="text-decoration: underline;color:#fd5454;">
-                快速报名
-            </a></div>
-    </div>
+
+    <!--<div class="row pt15">-->
+        <!--<div class="col-xs-12 text-right">-->
+            <!--<a href="book/Sign_UnReg.html" style="text-decoration: underline;color:#fd5454;">-->
+                <!--快速报名-->
+            <!--</a></div>-->
+    <!--</div>-->
 </div>
 
 
