--- a/Views/Admin/User/UserEdit.html
+++ b/Views/Admin/User/UserEdit.html
@@ -153,6 +153,9 @@
         <div class="col-xs-3">
             <button id="btnSave" style="width: 150px;height: 40px;margin-top: 50px">保 存</button>
         </div>
+        <div class="col-xs-3">
+            <button id="btnSaveAndAdd" style="width: 150px;height: 40px;margin-top: 50px">保存并报名</button>
+        </div>
     </div>
 
 
